# NewTimeLine

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml
services/agents/: Dockerfile  README.md  pyproject.toml
services/agents/src/chronos_agents/: __init__.py  _json.py  avatars.py  comfyui.py  dedup.py  enrich.py  geocode.py  ingest_rss.py  media_check.py  media_fetch.py  media_gap.py  media_measure.py  media_probe.py  media_quality.py  media_transcode.py  moderation.py  normalize.py  persona_gen.py  publish.py  relate.py  relate_smart.py  run.py  seed_iran_us.py  seed_video.py  seed_wikidata.py  tts.py  worker.py
services/agents/src/chronos_agents/bots/: __init__.py  bootstrap.py  discovery.py  interact.py  news_video.py  news_video_render.py  post.py  scheduler.py  topics.py
services/agents/src/chronos_agents/sources/: README.md  __init__.py  activitypub.py  base.py  collect.py  rss.py  (+5 more)
services/agents/tests/: test_attach_media.py  test_bots_discovery.py  test_extract_media.py  test_json_extract.py  test_media_policy_required.py  test_media_probe.py  test_media_transcode.py  test_normalize.py  test_relate.py  test_seed_iran_us.py  test_sources_base.py  test_wikimedia_quality.py
services/api/: Dockerfile  README.md  pyproject.toml
services/api/src/chronos_api/: __init__.py  admin_queries.py  auth_stub.py  deps.py  feed_queries.py  graph_queries.py  main.py  privacy.py  queries.py
services/api/tests/: test_auth_api.py  test_feed_diversify.py  test_interactions_api.py  test_search_helpers.py  test_social_api.py
(+224 files in other folders)
