[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chronos-agents"
version = "0.1.0"
description = "Chronos feed-first agent pipeline (Phase 1: Tier-1 RSS ingest + Wikidata seed)."
requires-python = ">=3.11"
dependencies = [
    "chronos-core",
    "feedparser>=6.0",
    "httpx>=0.27",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.6"]

[project.scripts]
chronos-agents = "chronos_agents.run:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
