[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chronos-api"
version = "0.1.0"
description = "Chronos Event API — timeline/map/event-detail/sub-timeline (FastAPI)."
requires-python = ">=3.11"
dependencies = [
    "chronos-core",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",  # multipart/form-data for POST /upload (ADR-0029)
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "httpx>=0.27", "ruff>=0.6"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: FastAPI intentionally uses Depends()/Query() as parameter defaults.
ignore = ["B008"]
